# alegen

./: CMakeLists.txt  conanfile.txt
resources/shader/: sprite.frag  sprite.vert
tetris/: CMakeLists.txt  logger.h  main.cpp  sprite.frag  sprite_renderer.h  tetris.h  text_renderer.h  timer.h  util.h
